# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Api\ChangePasswordController;
 use App\Http\Controllers\Api\JobApplicationController;
 use App\Http\Controllers\Api\JobVacancyController;
+use App\Http\Controllers\Api\TrainingController;
 use App\Http\Controllers\Api\LoginController;
 use App\Http\Controllers\Api\LogoutController;
 use App\Http\Controllers\Api\MeController;
@@ -18,6 +19,7 @@ Route::post('/login', LoginController::class)->name('api.login');
 Route::post('/refresh-token', RefreshTokenController::class)->name('api.refresh-token');
 Route::middleware('api.token')->group(function () {
     Route::get('/job-vacancies', [JobVacancyController::class, 'index'])->name('api.job-vacancies.index');
+    Route::get('/trainings', [TrainingController::class, 'index'])->name('api.trainings.index');
     Route::post('/job-vacancies/{uuid}/apply', [JobApplicationController::class, 'store'])->name('api.job-vacancies.apply');
     Route::get('/job-applications', [JobApplicationController::class, 'index'])->name('api.job-applications.index');
     Route::get('/profile', [ProfileController::class, 'show'])->name('api.profile.show');
